# lightning-ddp-randomness

./: LICENSE  README.md  pyproject.toml
lddpr/: main.py
