[project]
name = "lddpr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fire>=0.7.1",
    "lightning>=2.6.1",
    "torch>=2.10.0",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = [
    "I", # isort
]

[dependency-groups]
dev = [
    "ruff>=0.15.0",
]
